--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.13)
 # note: this must happen before project()
 include(pico_sdk_import.cmake)
 
-project(adc_display)
+project(Pitch_Detection)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -13,18 +13,17 @@ pico_sdk_init()
 
 # rest of your project
 
-add_executable(adc_display
+add_executable(Pitch_Detection
 	main.c 
 	../ssd1306.c
-	bootrom_api.c
 )
 
-target_include_directories(adc_display
+target_include_directories(Pitch_Detection
     PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/../
 )
 
-target_link_libraries(adc_display
+target_link_libraries(Pitch_Detection
 	pico_stdlib 
 	hardware_spi
 	hardware_gpio
@@ -33,9 +32,9 @@ target_link_libraries(adc_display
 	pico_bootrom
 	hardware_i2c)
 
-pico_enable_stdio_usb(adc_display 1) 
-pico_enable_stdio_uart(adc_display 0) 
+pico_enable_stdio_usb(Pitch_Detection 1) 
+pico_enable_stdio_uart(Pitch_Detection 0) 
 
 # create map/bin/hex/uf2 file in addition to ELF.
-pico_add_extra_outputs(adc_display)
+pico_add_extra_outputs(Pitch_Detection)
 
