--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ cmake_minimum_required(VERSION 3.13)
 # note: this must happen before project()
 include(pico_sdk_import.cmake)
 
-project(Pitch_Detection)
+project(Pitch_Detection C CXX ASM)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
 
 # initialize the Raspberry Pi Pico SDK
 pico_sdk_init()
@@ -16,6 +18,8 @@ pico_sdk_init()
 add_executable(Pitch_Detection
 	main.c 
 	pitch_analysis.c
+	#pico-example-midi.c
+  	#usb_descriptors.c
 )
 
 target_include_directories(Pitch_Detection
@@ -39,3 +43,6 @@ pico_enable_stdio_uart(Pitch_Detection 0)
 # create map/bin/hex/uf2 file in addition to ELF.
 pico_add_extra_outputs(Pitch_Detection)
 
+## FOR MIDI USB
+
+#target_link_libraries(pico-example-midi PRIVATE pico_stdlib tinyusb_device tinyusb_board)
